<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.lksnext.parking.viewmodel.RealizarReservaViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reserva"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/numeroPlaza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                tool:text="@string/insertdatos"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/userLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/nombre" />
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:hint="@string/nombreAux" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/horarioLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/horaInicioAux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/hora_inicio" />
            <Spinner
                android:id="@+id/horaInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:entries="@array/horas"
                android:spinnerMode="dropdown"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/horarioLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/horaFinAux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/hora_fin" />
            <Spinner
                android:id="@+id/horaFin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:entries="@array/horas"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
        </LinearLayout>

        <Button
            android:id="@+id/botonReserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:text="@string/start"
            android:enabled="false"/>

    </LinearLayout>

</layout>